# Vacancy_hh

./: README.md  main.py  pyproject.toml
data/: example.json
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_base_classes_py.html  z_145eef247bfb46b6_file_tool_py.html  z_145eef247bfb46b6_hh_vacancies_fetcher_py.html  z_145eef247bfb46b6_logger_py.html  z_145eef247bfb46b6_utils_py.html  z_145eef247bfb46b6_vacancy_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_file_tool_py.html  z_a44f0ac069e85531_test_hh_vacancies_fetcher_py.html  z_a44f0ac069e85531_test_utils_py.html  z_a44f0ac069e85531_test_vacancy_py.html
src/: base_classes.py  file_tool.py  hh_vacancies_fetcher.py  logger.py  utils.py  vacancy.py
tests/: conftest.py  test_file_tool.py  test_hh_vacancies_fetcher.py  test_info.json  test_utils.py  test_vacancy.py
