[tool.poetry]
name = "vacancy-searcher"
version = "0.1.0"
description = ""
authors = ["Roman.Iastremskyi <iastremskyi010397@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
requests = "^2.32.3"
types-requests = "^2.32.0.20240914"

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"


[tool.poetry.group.lint.dependencies]
black = "^24.10.0"
mypy = "^1.11.2"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.black]
line-length = 119
exclude = '''
(
  /(
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = '.venv'

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
